# Kampus-Mart-AI

./: .env  .env-example  README.md  main.py  pyproject.toml
database/: database.py
middleware/: auth_middleware.py
models/: __init__.py  associations.py  kelas.py  mahasiswa.py  matakuliah.py  produk.py  saldo.py  transaksi.py
routes/: auth_route.py  kelas_route.py  mahasiswa_route.py  matakuliah_route.py  produk_route.py  qris_route.py  saldo_route.py  transaksi_route.py  user_route.py
schemas/: auth.py  kelas.py  mahasiswa.py  matakuliah.py  produk.py  saldo.py  transaksi.py
static/: index.html
static/js/: app.js
utils/: auth_utils.py
